# gymbench

./: .gitignore  README.md  pyproject.toml
configs/env_gif/: box2d.toml  classic_control.toml
src/gymbench/: __init__.py  cli.py
src/gymbench/core/: __init__.py  algos.py  config.py  evaluate.py  framestack.py  registry.py  render.py  sink.py  trainer.py
src/gymbench/tools/: __init__.py
src/gymbench/tools/env_gif/: __init__.py
